--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -56,7 +56,7 @@
     <div class="header">Campaign Data</div>
     <div class="menu">
       <a class="item" href="{{pomspath}}/show_tags">
-        Tagged Campaigns
+        Campaigns
       </a>
       <a class="item" href="{{pomspath}}/show_campaigns">
         Campaign Stages
