just fix 'CampaignStage Stage' silliness

--- a/webservice/templates/actual_pending_files.html
+++ b/webservice/templates/actual_pending_files.html
@@ -28,7 +28,7 @@ Pending files for Jobs
 Pending files for:
 
      {% if campaign_stage_id is not none %}
-        CampaignStage Stage {{cs.name}}
+        Campaign Stage {{cs.name}}
      {% elif submission_id is not none %}
        Submissions(s) {{jjid}}
      {% elif job_id is not none %}
