--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -1,16 +1,16 @@
 {%extends "layout.html"%}
 
 {%block title%}
-POMS:CampaignStage Stage {{CampaignStage.name}} Info
+POMS:Campaign Stage {{CampaignStage.name}} Info
 {%endblock%}
 
 
 {%block header%}
-CampaignStage Stage Info {%include 'help_button.html'%}
+Campaign Stage Info {%include 'help_button.html'%}
 {%endblock%}
 
 {%block subheader%}
-CampaignStage Stage {{CampaignStage.name}}
+Campaign Stage {{CampaignStage.name}}
 {%endblock%}
 
 
