--- a/webservice/templates/inflight_files.html
+++ b/webservice/templates/inflight_files.html
@@ -20,7 +20,7 @@ In-Flight files for Jobs
 In-Flight files for:
 
      {% if campaign_stage_id is not none %}
-        CampaignStage Stages {{cs.name}}
+        Campaign Stages {{cs.name}}
      {% elif submission_id is not none %}
        Submissions(s) {{jjid}}
      {% elif job_id is not none %}
