--- a/webservice/templates/jobs_eff_histo.html
+++ b/webservice/templates/jobs_eff_histo.html
@@ -1,7 +1,7 @@
 {%extends "layout.html"%}
 
 {%block title%}
-POMS:Job efficiency in CampaignStage Stage {{campaign_stage_id}}
+POMS:Job efficiency in Campaign Stage {{campaign_stage_id}}
 {%endblock%}
 
 {%block header%}
