--- a/webservice/templates/jobs_time_histo.html
+++ b/webservice/templates/jobs_time_histo.html
@@ -1,7 +1,7 @@
 {%extends "layout.html"%}
 
 {%block title%}
-POMS:Job {{timetype}} Time Histogram for CampaignStage Stage {{cs.name}}
+POMS:Job {{timetype}} Time Histogram for Campaign Stage {{cs.name}}
 {%endblock%}
 
 {%block header%}
