--- a/webservice/templates/list_task_logged_files.html
+++ b/webservice/templates/list_task_logged_files.html
@@ -7,7 +7,7 @@ Submission {{jobsub_job_id}} Logged Files
 
 {%block header%}
 <h1 class="ui header">
-     CampaignStage Stages{%include 'help_button.html'%}
+     Campaign Stages{%include 'help_button.html'%}
 </h1>
 {%endblock%}
 
