--- a/webservice/templates/schedule_launch.html
+++ b/webservice/templates/schedule_launch.html
@@ -1,12 +1,12 @@
 {%extends "layout.html"%}
 
 {%block title%}
-POMS:CampaignStage Stage {{cs.name}} Scheduled Launches
+POMS:Campaign Stage {{cs.name}} Scheduled Launches
 {%endblock%}
 
 {%block header%}
 <h1 class="ui header">
-     CampaignStage Stage Launch Schedule{%include 'help_button.html'%}
+     Campaign Stage Launch Schedule{%include 'help_button.html'%}
 </h1>
 {%endblock%}
 
