--- a/webservice/templates/search_tags.html
+++ b/webservice/templates/search_tags.html
@@ -9,7 +9,7 @@ POMS Campaign Query Results
          Campaign Query Results {%include 'help_button.html'%}
 
           <div class="sub header">
-              view all CampaignStage Stages belonging to this Campaign/CampaignStage
+              view all Campaign Stages belonging to this Campaign/CampaignStage
           </div>
 </h1>
 {%endblock%}
@@ -27,7 +27,7 @@ POMS Campaign Query Results
 <table class="ui sortable celled table">
   <thead>
     <tr>
-      <th class="">CampaignStage Stage Name</th>
+      <th class="">Campaign Stage Name</th>
       <th class="">Experiment</th>
     </tr>
   </thead>
