--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -1,11 +1,11 @@
 {%extends "layout.html"%}
 
 {%block title%}
-POMS: CampaignStage Stages
+POMS: Campaign Stages
 {%endblock%}
 
 {%block header%}
-CampaignStage Stages{%include 'help_button.html'%}
+Campaign Stages{%include 'help_button.html'%}
 <script>
     function do_checkall() {
         // console.log("In do_changeall");
