--- a/webservice/templates/show_campaigns_stats.html
+++ b/webservice/templates/show_campaigns_stats.html
@@ -1,11 +1,11 @@
 {%extends "layout.html"%}
 
 {%block title%}
-POMS:Selected CampaignStage Stages
+POMS:Selected Campaign Stages
 {%endblock%}
 
 {%block header%}
-Selected CampaignStage Stages{%include 'help_button.html'%}
+Selected Campaign Stages{%include 'help_button.html'%}
 {%endblock%}
 
 {%block content%}
@@ -20,7 +20,7 @@ Selected CampaignStage Stages{%include 'help_button.html'%}
        <th colspan = 4>Jobs in  {{time_range_string}}</th>
      </tr>
      <tr>
-       <th colspan=1 align="center"> CampaignStage Stage
+       <th colspan=1 align="center"> Campaign Stage
         <a target="_help" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#CampaignStage"><i style="float: none" class="grey help circle link icon"></i></a>
       </th>
       <th>Total</th>
