--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -140,7 +140,7 @@ Held because: {{job_info.Job.reason_held}}
       </tr>
 
       <tr>
-        <td>CampaignStage Stage</td>
+        <td>Campaign Stage</td>
         <td>
           <p>{{job_info.CampaignStage.name}}</p>
         </td>
