--- a/webservice/templates/campaign_edit.html
+++ b/webservice/templates/campaign_edit.html
@@ -21,7 +21,7 @@ POMS
 </style>
 
 {%block header%}
-CampaignStage Stages {{ show_hint('', 'Help page') }}
+Campaign Stages {{ show_hint('', 'Help page') }}
 {%endblock%}
 
 {%block subheader%}
@@ -140,7 +140,7 @@ CampaignStage Stages {{ show_hint('', 'Help page') }}
 <div class="ui modal" id="confirm_modal">
   <i class="close icon"></i>
   <div class="header">
-    Delete CampaignStage Stage
+    Delete Campaign Stage
   </div>
   <div class="image content">
     <div class="image">
@@ -165,7 +165,7 @@ CampaignStage Stages {{ show_hint('', 'Help page') }}
 
 <div class="ui modal" id="campaign_add_edit_modal">
   <i class="close icon"></i>
-  <h3 class="block header"><span id="ae_experiment">CampaignStage Stage Editor {{ show_hint('', 'Help Page') }}</span></h3>
+  <h3 class="block header"><span id="ae_experiment">Campaign Stage Editor {{ show_hint('', 'Help Page') }}</span></h3>
   <div class="ui hidden divider"></div>
   <div class="ui text container">
     <form id="campaign_add_edit_form" class="ui form" method="POST" action="campaign_edit">
@@ -173,7 +173,7 @@ CampaignStage Stages {{ show_hint('', 'Help page') }}
       <div class="fields">
         <div class="field">
             <label>Name {{ show_hint('#Stage-Name', 'Stage name') }}</label>
-            <input type="text" id="ae_campaign_name" name="ae_campaign_name" placeholder="CampaignStage Stage Name">
+            <input type="text" id="ae_campaign_name" name="ae_campaign_name" placeholder="Campaign Stage Name">
         </div>
         <div class="field">
             <label>VO Role {{ show_hint('#VO-Role', 'Role name') }}</label>
@@ -362,14 +362,14 @@ CampaignStage Stages {{ show_hint('', 'Help page') }}
 <div class="ui small modal" id="edit_depends_modal">
   <i class="close icon"></i>
   <div class="header">
-    CampaignStage Stage Dependency Editor
+    Campaign Stage Dependency Editor
   </div>
   <div class="ui text container">
     <div class="scrollable">
       <table class="ui celled table" id="ep_table">
         <thead>
           <tr>
-            <th>CampaignStage Stage</th>
+            <th>Campaign Stage</th>
             <th>File Pattern</th>
           </tr>
         </thead>
@@ -707,7 +707,7 @@ function edit_campaign(index,clone) {
     $("#ae_depends").val( '{"campaign_stages": [], "file_patterns": []}' );
     $("#ae_depends_text").val( '{"campaign_stages": [], "file_patterns": []}' );
   }
-  $("#ae_experiment").text("CampaignStage Stage Editor ({{ data.curr_experiment if data.curr_experiment is defined}})");
+  $("#ae_experiment").text("Campaign Stage Editor ({{ data.curr_experiment if data.curr_experiment is defined}})");
   $("#ae_active").val( $("#c_active_"+index).text() ).trigger('change');
   $("#ae_vo_role").val( $("#c_vo_role_"+index).text() );
   $("#ae_software_version").val( $("#c_software_version_"+index).text() );
@@ -747,7 +747,7 @@ function edit_campaign(index,clone) {
 
 function add_campaign() {
   $("#campaign_add_edit_modal").form('reset');
-  $("#ae_experiment").text("CampaignStage Stage Editor ({{ data.curr_experiment if data.curr_experiment is defined}})");
+  $("#ae_experiment").text("Campaign Stage Editor ({{ data.curr_experiment if data.curr_experiment is defined}})");
   $("#campaign_add_edit_modal").modal({}).modal('show');
 }
 
