--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -53,13 +53,13 @@
   {% endif %}
 
   <div class="item">
-    <div class="header">CampaignStage Data</div>
+    <div class="header">Campaign Data</div>
     <div class="menu">
       <a class="item" href="{{pomspath}}/show_tags">
-        Tagged Campaigns
+        Campaigns
       </a>
       <a class="item" href="{{pomspath}}/show_campaigns">
-        CampaignStage Stages
+        Campaign Stages
       </a>
       <a class="item" href="{{pomspath}}/sample_workflows">
         Sample Workflows
@@ -76,13 +76,13 @@
     <div class="header">Configure Work</div>
     <div class="menu">
       <a class="item" href="{{pomspath}}/launch_template_edit">
-        Compose Launch Template
+        Compose Launch/Setup
       </a>
       <a class="item" href="{{pomspath}}/campaign_definition_edit">
         Compose Job Type
       </a>
       <a class="item" href="{{pomspath}}/campaign_edit">
-        Compose CampaignStage Stages
+        Compose Campaign Stages
       </a>
       <a class="item" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/LaunchConfigFileTemplates">
         Config File Templates
@@ -97,10 +97,10 @@
 	All (Last Day)
       </a>
       <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=1&f=user_exe_exit_code&f=name">
-        Failed_By Exit Code and CampaignStage Stage Name (Last Day)
+        Failed_By Exit Code and Campaign Stage Name (Last Day)
       </a>
       <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=7&f=user_exe_exit_code&f=name">
-        Failed_By Exit Code and CampaignStage Stage Name (Last Week)
+        Failed_By Exit Code and Campaign Stage Name (Last Week)
       </a>
       <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=1&f=user_exe_exit_code&f=node_name">
         Failed_By Exit Code and Node Name (Last Day)
