--- a/webservice/static/css/gui_editor_3.css
+++ b/webservice/static/css/gui_editor_3.css
@@ -5,7 +5,7 @@ div.gui_editor_frame {
     border: 1px solid black;
     border-radius: 0.5em;
     /* try to force a stacking context... */
-    opacity: 0.99; 
+    opacity: 0.99;
 }
 
 
@@ -40,13 +40,13 @@ div.depbox1 {
    right: 0;
 }
 div.depbox1.uphill {
-   border-right: 0px solid white !important; 
+   border-right: 0px solid white !important;
    border-left: 2px solid red;
    border-bottom: 2px solid red;
 }
 
 div.depbox1.downhill {
-   border-left: 0px solid white !important; 
+   border-left: 0px solid white !important;
    border-right: 2px solid red;
    border-bottom: 2px solid red;
 }
@@ -68,7 +68,7 @@ div.box.selected {
 }
 
 
-.popup_form { 
+.popup_form {
     display: block;
     background-color: white;
     position: absolute;
@@ -100,11 +100,11 @@ div.box.selected {
     width: 30%;
 }
 
-.rightbutton { 
+.rightbutton {
   display: block;
   float: right;
 }
 
-.wakefields:before { content: "\25a6"; width: 1em; height 1em; font-size: larger }
-.wakedeps:before { content: "\269f"; width: 1em; height 1em;  font-size: larger}
-.deletebutton:before { content: "\267b"; width: 1em; height 1em;  font-size: larger}
+.wakefields:before { content: "\25a6"; width: 1em; height 1em; font-size: larger; }
+.wakedeps:before { content: "\269f"; width: 1em; height 1em;  font-size: larger; }
+.deletebutton:before { content: "\267b"; width: 1em; height 1em;  font-size: largerl }
