--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -75,7 +75,7 @@
   <div class="item">
     <div class="header">Configure Work</div>
     <div class="menu">
-      <a class="item" href="{{pomspath}}/launch_template_edit">
+      <a class="item" href="{{pomspath}}/login_setup_edit">
         Compose Launch/Setup
       </a>
       <a class="item" href="{{pomspath}}/campaign_definition_edit">
