--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -419,15 +419,15 @@ $( document ).ready(function() {
   </div>
     <div class="ui segment raised">
     <h3>Launch/Setup</h3>
-    <b>Name</b>: {{Login_setup_info.LoginSetup.name}}<br>
+    <b>Name</b>: {{login_setup_info.LoginSetup.name}}<br>
     <b>Experiment</b>: {{CampaignStage.experiment}}<br>
-    <b>Launch Host</b>: {{Login_setup_info.LoginSetup.launch_host}}<br>
-    <b>Launch Account</b>: {{Login_setup_info.LoginSetup.launch_account}}<br>
-    <b>Launch Setup</b>: {{Login_setup_info.LoginSetup.launch_setup}}<br>
-    <b>Creator</b>: {{Login_setup_info.Experimenter.username}}<br>
-    <b>Created</b>: {{Login_setup_info.LoginSetup.created}}<br>
-    <b>Updater</b>: {{Login_setup_info.Experimenter.username}}<br>
-    <b>Updated</b>: {{Login_setup_info.LoginSetup.updated}}<br>
+    <b>Launch Host</b>: {{login_setup_info.LoginSetup.launch_host}}<br>
+    <b>Launch Account</b>: {{login_setup_info.LoginSetup.launch_account}}<br>
+    <b>Launch Setup</b>: {{login_setup_info.LoginSetup.launch_setup}}<br>
+    <b>Creator</b>: {{login_setup_info.Experimenter.username}}<br>
+    <b>Created</b>: {{login_setup_info.LoginSetup.created}}<br>
+    <b>Updater</b>: {{login_setup_info.Experimenter.username}}<br>
+    <b>Updated</b>: {{login_setup_info.LoginSetup.updated}}<br>
     </div>
 
    <div class="ui segment raised">
