Support for listserv.

--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -76,7 +76,7 @@
     <div class="header">Configure Work</div>
     <div class="menu">
       <a class="item" href="{{pomspath}}/login_setup_edit">
-        Compose Launch/Setup
+        Compose Login/Setup
       </a>
       <a class="item" href="{{pomspath}}/campaign_definition_edit">
         Compose Job Type
