--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -55,10 +55,10 @@
   <div class="item">
     <div class="header">Campaign Data</div>
     <div class="menu">
-      <a class="item" href="{{pomspath}}/show_tags">
+      <a class="item" href="{{pomspath}}/show_campaigns">
         Campaigns
       </a>
-      <a class="item" href="{{pomspath}}/show_campaigns">
+      <a class="item" href="{{pomspath}}/show_campaign_stages">
         Campaign Stages
       </a>
       <a class="item" href="{{pomspath}}/sample_workflows">
